chore(style): update style files - update imports of tailwind.config to use HeroUI instead of NextUI - add thin scrollbar style to globals.css

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,6 +22,11 @@ body {
   margin: 0px;
 }
 
+* {
+  scrollbar-width: thin;
+  scrollbar-color: hsl(var(--heroui-foreground-200)) transparent;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
